--- a/apostilas.html
+++ b/apostilas.html
@@ -23,7 +23,7 @@
 <div class="js-page">
   <div class="js-post">
     <h1>Apostilas impressas</h1>
-    <p>Confira aqui a lista atualizada de apostilas diretas disponibilizadas pelo autor na plataforma do Clube de
+    <p>Confira aqui a lista atualizada de apostilas disponibilizadas pelo autor na plataforma do Clube de
       Autores.
     </p>
   </div>
