--- a/aprendizado.html
+++ b/aprendizado.html
@@ -27,14 +27,16 @@
   </div>
   <br>
   <!--#region CURSOS -->
-  <div class="child js-post">
-    <img src="./files/web.webp" alt="">
-    <div>
-      <h3>Web Design</h3>
-      <p>Aprenda Web, HTML, CSS e Web Design Responsivo</p>
-      <a class="js-button" href="#">Conheça</a>
+<!--
+    <div class="child js-post">
+      <img src="./files/web.webp" alt="">
+      <div>
+        <h3>Web Design</h3>
+        <p>Aprenda Web, HTML, CSS e Web Design Responsivo</p>
+        <a class="js-button" href="#">Conheça</a>
+      </div>
     </div>
-  </div>
+-->
   <br>
   <div class="child js-post">
     <img src="./files/design.webp" alt="">
@@ -52,6 +54,14 @@
       <p>Aprenda informática básica e avançada e muito mais</p>
       <a class="js-button" href="./intro.html">Conheça</a>
     </div>
+  </div>
+  <br>
+  
+
+  <div class="js-post">
+    <h2>Prefere adquirir uma apostila?</h2>
+    <p>Adquira as apostilas e manuais dos cursos no link a seguir:</p>
+    <a class="js-button" href="/apostilas.html">Apostilas</a>
   </div>
   <br>
 </div>
