--- a/desenvolvimento.html
+++ b/desenvolvimento.html
@@ -27,6 +27,9 @@
     Na lista a seguir estão meus projetos pessoais, tanto para comercialização como para finalidades diversas.
     Prezando pela privacidade dos clientes não incluo aqui projetos feitos por mim para terceiros.
   </p>
+  <p class="notas">
+    Novos projetos estão sendo desenvolvidos neste exato momento e em breve estarão por aqui!
+  </p>
 </div>
 
 </html>
