--- a/design/criandopublisher.html
+++ b/design/criandopublisher.html
@@ -70,7 +70,7 @@
         <p>
             As páginas-mestre servem para criar um ou mais layout padrão que serão aplicados à todas as páginas ou a
             páginas diferentes. Por exemplo, podemos criar um layout para capas de capítulos, e outro para o conteúdo,
-            ou criar um layout paras as páginas à direita e outro para as páginas à esquerda.
+            ou criar um layout para as páginas à direita e outro para as páginas à esquerda.
         </p>
         <p>
             1. Ainda no menu Design de Página, clique em Páginas Mestras e escolha Editar Páginas Mestras.
@@ -461,10 +461,10 @@
             Exportação
         </h3>
         <p>
-            1. Para exportar o documento, clique em  Arquivo  Exportar  Criar PDF/XPS.
+            1. Para exportar o documento, clique em &rightarrow; Arquivo &rightarrow; Exportar &rightarrow; Criar PDF/XPS.
         </p>
         <p>
-            2. Na janela que se abriu, clique em  Opções  Opções de Impressão.
+            2. Na janela que se abriu, clique em &rightarrow; Opções &rightarrow; Opções de Impressão.
         </p>
         <p>
             3. Em Tamanho, selecione A5.
