--- a/design/tutorialill.html
+++ b/design/tutorialill.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -23,16 +22,284 @@
 
 <div class="js-page">
     <div class="js-post">
-        <a href="." class="js-button">Anterior</a>
-        <a href="." class="js-button" style="float: right;">Próximo</a>
+        <a href="./coreldraw.html" class="js-button">Anterior</a>
+        <a href="./fundamentosbit.html" class="js-button" style="float: right;">Próximo</a>
 
 
         <h1>
+            Tutorial Illustrator
         </h1>
 
         <p>
+            Neste tutorial aprenderemos as ferramentas básicas do Illustrator para criar desenho vetorial da mesma
+            maneira que fizemos inicialmente com o Inkscape. Este tutorial apesar de simples oferece conhecimento das
+            ferramentas mais essenciais para o desenho.
+        </p>
+        <p class="notas">
+            Para fins de aprendizagem, alguns recursos deste tutorial podem ser acessados tanto nos menus como na janela
+            Propriedades mas optamos por utilizá-los diretamente em sua própria janela dedicada.
+        </p>
+        <p>
+            Veja abaixo a arte que deveremos criar neste tutorial:
+        </p>
+        <img src="./tutorialill.jpg" alt="">
+
+        <h3>
+            Novo Arquivo
+        </h3>
+        <p>
+            1. Abra o Illustrator.
+        </p>
+        <p>
+            2. Clique em Criar. A janela Novo Documento será exibida, configure o novo arquivo da seguinte maneira:
+        </p>
+        <p>
+            3. Em Nome do Arquivo digite “Tutorial Illustrator”.
+        </p>
+        <p>
+            4. Selecione a unidade de medida como Pixels.
+        </p>
+        <p>
+            5. Defina a largura como 1280px e a altura como 720px.
+        </p>
+        <p>
+            6. Escolha o modo de cores RGB.
+        </p>
+        <p>
+            7. Defina a resolução como 300px.
+        </p>
+        <p>
+            8. Clique em Criar.
+        </p>
+        <p>
+            Temos nosso arquivo novo criado com uma prancheta nas dimensões certas e já com o modo de cor configurado.
+            No entanto, se você tivesse que configurar essas propriedades após criar um arquivo novo, pode alterá-las na
+            janela Propriedades, clicando em Editar Pranchetas &rightarrow; Opções da Prancheta. A janela de propriedades pode ser
+            ativada no menu Janela.
+        </p>
+        <p class="notas">
+            Salve o desenho em sua pasta.
+        </p>
+        <h3>
+            Janelas de Encaixe
+        </h3>
+        <p>
+            Neste tutorial aprenderemos a utilizar alguns recursos do Illustrator que estão presentes em janelas de
+            encaixe que podem ou não vir ativadas por padrão na primeira vez que você abrir a aplicação. Então para
+            isso, vamos ativar as que não estiverem.
+        </p>
+        <p>
+            Para ativar uma janela de encaixa, clique no menu Janela, procure pela janela em questão na lista e clique.
+            Precisaremos das seguintes janelas: Propriedades, Camadas, Gradiente, Transparência, Alinhar, PathFinder,
+            Aparência. Após inseri-las, arraste para a lateral direita da tela e encaixe-as uma abaixo da outra. Como
+            podemos ver abaixo:
+        </p>
+        <img src="./tutorialill2.jpg" alt="">
+
+        <h3>
+            Ferramentas
+        </h3>
+        <p>
+            A primeira coisa que devemos saber ao utilizar o Illustrator pela primeira vez é o uso do mouse e do
+            teclado. Bem, em versões mais antigas do Illustrator, provavelmente o comportamento do mouse para o zoom ou
+            arrastar a tela pode ser diferente, como necessitar da Barra de Espaço para mover a tela ou da tecla Control
+            para aumentar ou diminuir o zoom, nas versões mais recentes isto pode ser feito apenas com o mouse, da
+            seguinte forma:
+        </p>
+        <p>
+            <b>Mover a tela:</b> Clicando e arrastando com a scroll do mouse.
+        </p>
+        <p>
+            <b>Ajustar o zoom:</b> Girando a scroll do mouse.
+        </p>
+        <p>
+            Em seguida devemos saber selecionar objetos, mover ou distorcê-los, o que podemos fazer da seguinte forma:
+        </p>
+        <p>
+            <b>Selecionar objetos:</b> Utilize a ferramenta Seleção (V).
+        </p>
+        <p>
+            <b>Mover objetos:</b> Selecione um objeto com a ferramenta Seleção, clique sobre o objeto e arraste.
+        </p>
+        <p>
+            <b>Girar objetos:</b> Com o objeto selecionado e a ferramenta Seleção ativa, aproxime o cursor perto de uma
+            das
+            extremidades do objeto até que ele mude de formato para uma alça curva, clique e arraste para girar.
+        </p>
+        <p>
+            <b>Duplicar objetos:</b> Com a ferramenta Seleção ativa e o objeto selecionado, clique e arraste segurando a
+            tecla
+            Alt.
+        </p>
+        <p>
+            <b>Espelhar objetos:</b> Com o objeto selecionado clique no ícone Virar Horizontalmente ou Virar Verticalmente
+            na
+            janela Propriedades.
+        </p>
+        <h3>
+            Criando o Background
+        </h3>
+        <p>
+            Em primeiro lugar vamos criar o retângulo de fundo e aplicar uma cor a ele:
+        </p>
+        <p>
+            1. Selecione a ferramenta Retângulo, que pode estar dentro de um conjunto, verifique se encontre uma
+            ferramenta de forma básica como retângulo, elipse, estrela etc., para abrir um conjunto clique e segure.
+        </p>
+        <p>
+            2. Clique num dos cantos da prancheta e arraste até o canto oposto. O Illustrator tende a alinhar o desenho
+            automaticamente. Certifique-se do retângulo estar bem encaixado na prancheta, se necessário altere seu
+            tamanho e posição.
+        </p>
+        <p>
+            3. Pressione V para pegar a seleção e clique no retângulo.
+        </p>
+        <p>
+            4. Clique na janela Gradiente do lado direito.
+        </p>
+        <p>
+            5. Clique em Gradiente Linear.
+        </p>
+        <p>
+            6. Altere o ângulo para 90º.
+        </p>
+        <p>
+            7. Altere a primeira cor para um verde azulado claro e a segunda para uma variação ligeiramente mais escura.
+        </p>
+        <p>
+            8. Pressione P para pegar a ferramenta caneta e desenhe duas formas de trapézio encaixadas na lateral como
+            podemos ver na imagem a seguir:
+        </p>
+        <img src="./tutorialill3.jpg" alt="">
+        <p>
+            9. Aplique a cada uma um gradiente, apenas mude as cores e a direção do degradê (do mais escuro para o mais
+            claro).
+        </p>
+        <p>
+            10. Vamos agora criar os círculos no espaço vazio. Pegue a ferramenta Elipse, e com a tecla Control
+            pressionada, clique e arraste para desenhar o primeiro.
+        </p>
+        <p>
+            11. Clique duas vezes no ícone Preenchimento, na parte inferior da Barra de Ferramentas.
+        </p>
+        <p>
+            12. Defina o preenchimento como branco e confirme.
+        </p>
+        <p>
+            13. Agora na janela Transparência, defina a opacidade como 50%.
+        </p>
+        <p>
+            14. Duplique o círculo criando mais duas cópias, mova-as e altere seus tamanhos como desejar.
         </p>
 
+        <h3>
+            Editando as curvas
+        </h3>
+        <p>
+            1. Nosso próximo passo é editar as curvas dos quadriláteros que criamos na lateral esquerda, para isso
+            utilizamos a ferramenta Ponto de Ancoragem.
+        </p>
+        <p>
+            2. Clique na ferramenta Ponto de Ancoragem.
+        </p>
+        <p>
+            3. Selecione o primeiro dos quadriláteros.
+        </p>
+        <p>
+            4. Clique na borda que deve ser curvada e arraste.
+        </p>
+        <p>
+            5. Ajuste as alças.
+        </p>
+        <p>
+            6. Faça o mesmo com a outra forma.
+        </p>
+        <h3>
+            Inserindo o texto
+        </h3>
+        <p>
+            1. Pressione T para pegar a ferramenta Tipo.
+        </p>
+        <p>
+            2. Clique na tela e digite: Treinamento em Design Gráfico.
+        </p>
+        <p>
+            3. Na janela Propriedades, altere as propriedades do texto para:
+        </p>
+        <p>
+            Fonte: Tw Cen MT Condensed Extra Bold
+        </p>
+        <p>
+            Alinhamento: À Direita.
+        </p>
+        <p>
+            Tamanho: 100.
+        </p>
+        <p>
+            4. Na Barra de Ferramentas, altere a cor do preenchimento para branco.
+        </p>
+        <p>
+            5. Posicione no desenho.
+        </p>
+        <h3>
+            Inserindo a imagem
+        </h3>
+        <p>
+            1. Agora vamos inserir a imagem do notebook no desenho e aplicar um leve brilho branco ao seu redor para
+            destacá-lo do fundo.
+        </p>
+        <p>
+            2. Clique no menu Arquivo &rightarrow; Inserir, navegue até a pasta de Imagens do curso. Escolha o arquivo
+            Notebook.png.
+        </p>
+        <p class="notas">
+            Se não tiver acesso à pasta, você pode baixar todos os arquivos na sessão de downloads do curso no final do índice.
+        </p>
+        <p>
+            3. Altere o tamanho e posicione dentro do desenho.
+        </p>
+        <p>
+            4. Para aplicar o brilho, clique na janela Aparência. Selecione Adicionar novo efeito &rightarrow; Estilizar, Brilho
+            externo.
+        </p>
+        <p>
+            5. Configure o novo efeito da seguinte forma:
+        </p>
+        <p>
+            Cor: Branca.
+        </p>
+        <p>
+            Modo: Normal
+        </p>
+        <p>
+            Opacidade: 100
+        </p>
+        <p>
+            Desfoque: 5
+        </p>
+        <p>
+            6. Em seguida confirme.
+        </p>
+        <h3>
+            Exportar
+        </h3>
+        <p>
+            Com tudo preparado, vamos exportar! O Illustrator possui ótimos recursos de exportação que utilizaremos agora:
+        </p>
+        <p>
+            1. Clique em Arquivo &rightarrow; Exportar &rightarrow; Exportar para telas.
+        </p>
+        <p>
+            2. Selecione a guia Pranchetas. E marque a prancheta com o desenho que criamos.
+        </p>
+        <p>
+            3. Ao lado direito escolha a pasta onde deseja salvar, desmarque a opção criar subpastas, e escolha o formato PNG. Em seguida clique em Exportar Prancheta.
+        </p>
+        <p class="notas">
+            Salve seu desenho.
+        </p>
+    
+    
     </div>
 </div>
 
