--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 <menu-bar></menu-bar>
 
 <div class="img-slider">
-  <a href="#" class="banner"><img id="img4" src="./files/capa4.webp" alt=""></a>
-  <a href="#" class="banner"><img id="img3" src="./files/capa3.webp" alt=""></a>
-  <a href="#" class="banner"><img id="img2" src="./files/capa2.webp" alt=""></a>
-  <a href="#" class="banner"><img id="img1" src="./files/capa1.webp" alt=""></a>
+  <a href="./aprendizado.html" id="img4" class="banner"><img src="./files/capa4.webp" alt="Aprendizado On-Line"></a>
+  <a href="./apostilas.html" id="img3" class="banner"><img src="./files/capa3.webp" alt="Apostilas e Manuais"></a>
+  <a href="./desenvolvimento.html" id="img2" class="banner"><img src="./files/capa2.webp" alt="Desenvolvimento Web e de Software"></a>
+  <a class="banner"><img id="img1" src="./files/capa1.webp" alt="Banner inicial"></a>
 </div>
 
 <div class="js-post">
@@ -159,9 +159,9 @@
 </div>
 
 <div class="js-post">
-  <p style="text-indent: 0;">
+  <p style="text-indent: 0; font-style: italic; text-align: center;">
     Então Jesus tornou a falar-lhes, dizendo: Eu sou a luz do mundo; quem me segue de modo algum andará em trevas, mas
-    terá a luz da vida..<br>
+    terá a luz da vida.<br>
     João 8:12
 </div>
 
