--- a/apostilas.html
+++ b/apostilas.html
@@ -33,9 +33,19 @@
     <img src="./files/designCapa.webp" alt="">
     <div>
       <h3>Design Gráfico</h3>
-      <p>Aprenda os conceitos fundamentais de design gráfico</p>
-      <a class="js-button" href="https://clubedeautores.com.br/livro/curso-completo-de-design-grafico"
-        target="_blank">Conheça</a>
+      <hr>
+      <b><p>Aprenda os conceitos fundamentais de design gráfico.</b><br>
+        Nº de páginas: 222.<br>
+        Dimensões: 14.8 x 21cm<br>
+        Acabamento: Brochura com orelha.<br>
+        Edição: (1) (2022).<br>
+        Interior: Colorido.<br>
+      </p>
+      <h2>
+        R$: 139,15
+        <a class="js-button" href="https://clubedeautores.com.br/livro/curso-completo-de-design-grafico"
+          style="float: right;" target="_blank">Confira</a>
+      </h2>
     </div>
   </div>
   <br>
@@ -43,9 +53,21 @@
     <img src="./files/informaticaCapa.webp" alt="">
     <div>
       <h3>Informática</h3>
-      <p>Aprenda informática básica e avançada e muito mais</p>
-      <a class="js-button" href="https://clubedeautores.com.br/livro/curso-de-informatica-basica-e-avancada"
-        target="_blank">Conheça</a>
+      <hr>
+      <p>
+        <b>Aprenda informática básica e avançada e muito mais.</b><br>
+        Nº de páginas: 244.<br>
+        Dimensões: 14.8 x 21cm<br>
+        Acabamento: Brochura com orelha.<br>
+        ISBN: 9798417818714<br>
+        Edição: (1) (2022)<br>
+        Interior: Colorido.
+      </p>
+      <h2>
+        R$: 143,58
+        <a class="js-button" href="https://clubedeautores.com.br/livro/curso-de-informatica-basica-e-avancada"
+        style="float: right;" target="_blank">Confira</a>
+      </h2>
     </div>
   </div>
   <br>
@@ -53,8 +75,20 @@
     <img src="./files/webDesignCapa.webp" alt="">
     <div>
       <h3>Web Design</h3>
-      <p>Aprenda Web, HTML, CSS e Web Design Responsivo</p>
-      <a class="js-button" href="https://clubedeautores.com.br/livro/curso-de-web-design-2" target="_blank">Conheça</a>
+      <hr>
+      <p>
+        <b>Aprenda Web, HTML, CSS e Web Design Responsivo.</b><br>
+        Número de páginas: 226<br>
+        Dimensões: 14.8 x 21cm<br>
+        Acabamento: Brochura com orelha.<br>
+        Edição: (1) (2022)<br>
+        Interior: Colorido.
+      </p>
+      <h2>
+        R$: 140,11
+        <a class="js-button" href="https://clubedeautores.com.br/livro/curso-de-web-design-2" style="float: right;"
+          target="_blank">Confira</a>
+      </h2>
     </div>
   </div>
   <br>
@@ -74,6 +108,7 @@
     display: grid;
     grid-template-columns: 0.5fr 1.5fr;
     user-select: none;
+    vertical-align: middle;
   }
 
   .child div {
