--- a/design/0.html
+++ b/design/0.html
@@ -140,6 +140,7 @@
     <a href="./fundamentosbit.html">Bitmaps</a>
 
     <p>Tratamento e Manipulação de Imagens</p>
+    <a href="./tratamentoimg.html">Tratamento e Manipulação de Imagens</a>
     <a href="./gimp.html">GIMP</a>
     <a href="./selecao.html">Seleção</a>
     <a href="./retoque.html">Retoque e correção</a>
