--- a/design/selecao.html
+++ b/design/selecao.html
@@ -23,8 +23,8 @@
 
 <div class="js-page">
     <div class="js-post">
-        <a href="." class="js-button">Anterior</a>
-        <a href="." class="js-button" style="float: right;">Próximo</a>
+        <a href="./gimp.html" class="js-button">Anterior</a>
+        <a href="./retoque.html" class="js-button" style="float: right;">Próximo</a>
 
 
         <h1>
