--- a/design/tutorialill.html
+++ b/design/tutorialill.html
@@ -259,7 +259,7 @@
             3. Altere o tamanho e posicione dentro do desenho.
         </p>
         <p>
-            4. Para aplicar o brilho, clique na janela Aparência. Selecione Adicionar novo efeito &rightarrow; Estilizar, Brilho
+            4. Para aplicar o brilho, clique na janela Aparência. Selecione Adicionar novo efeito &rightarrow; Estilizar &rightarrow; Brilho
             externo.
         </p>
         <p>
