--- a/design/gimp.html
+++ b/design/gimp.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -23,16 +22,27 @@
 
 <div class="js-page">
     <div class="js-post">
-        <a href="." class="js-button">Anterior</a>
-        <a href="." class="js-button" style="float: right;">Próximo</a>
+        <a href="./tratamentoimg.html" class="js-button">Anterior</a>
+        <a href="./selecao.html" class="js-button" style="float: right;">Próximo</a>
 
 
         <h1>
+            GIMP
         </h1>
-
         <p>
+            O GIMP é um editor de imagens gratuito e de código aberto, ou seja, qualquer um pode alterar o código de
+            acordo com sua preferência, disponível para diversas plataformas incluindo Windows, Linux e Mac, que conta
+            com uma grande comunidade e uma enorme variedade de plugins. Você pode baixar o GIMP na página gimp.org.
         </p>
-
+        <p>Área de Trabalho do GIMP: </p>
+        <img src="./gimp.jpg" alt="">
+        <p>
+            O GIMP possui uma curva de aprendizado extremamente baixa, podendo um iniciante dominá-lo completamente em
+            apenas algumas horas de uso, no entanto não deixa a desejar em nada. Ao iniciarmos, encontraremos o espaço
+            de trabalho ao centro onde visualizaremos os arquivos que abrirmos, ao lado direito as Janelas de Encaixe e
+            ao lado esquerdo as Barras de Ferramentas. Veremos a partir de agora as ferramentas essenciais e o que
+            podemos fazer com elas.
+        </p>
     </div>
 </div>
 
